--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 		<meta name="description" content="Web site created using create-react-app" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<meta name="google-site-verification" content="ZylezjD0TTNDxvpj_k_6lM9RIzhCl7ajigK88YXWNo0" />
 		<title>Pinturerías CITO</title>
 	</head>
 	<body>
@@ -15,4 +16,3 @@
 		<div id="root"></div>
 	</body>
 </html>
-
