--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Web site created using create-react-app" />
+		<meta name="description" content="Pinturerías CITO" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<meta name="google-site-verification" content="ZylezjD0TTNDxvpj_k_6lM9RIzhCl7ajigK88YXWNo0" />
